--- a/source/dialogs/histogram-format/histogram-format-modal.html
+++ b/source/dialogs/histogram-format/histogram-format-modal.html
@@ -6,7 +6,7 @@
                 <h4 class="modal-title"><span class="images-properties-16x16"></span>&nbsp;Histogram Format</h4>
             </div>
 
-            <div class="modal-body">
+            <div class="modal-body dialog-style">
                 <wi-tabset>
                     <wi-tab heading='Scales'>
                         <div class="padding-1em container-fluid">
@@ -66,7 +66,8 @@
                                                     <!-- <select class="form-control wi-form-control" ng-model="wiModal.SelectedCurve" ng-change="wiModal.onSelectCurveChange()" ng-options="curve as curve.datasetCurve for curve in wiModal.curvesArr">
                                                     </select> -->
                                                     <ui-select ng-model="wiModal.SelectedCurve"
-                                                        ng-change="wiModal.onSelectCurveChange()">
+                                                        ng-change="wiModal.onSelectCurveChange()"
+                                                        class="normal-text">
                                                         <ui-select-match placeholder='Select a curve'>{{wiModal.SelectedCurve.properties.name}}</ui-select-match>
                                                         <ui-select-choices group-by="'datasetName'"
                                                         repeat='curve in wiModal.curvesArr | filter: $select.search'>
