--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -199,6 +199,8 @@
                                                             ng-options="item.id as item.datasetCurve for item in wiModal.curvesArr"
                                                             ng-change="wiModal.onSelectCurve();" 
                                                             ng-disabled="wiModal.setDisabledCurve(curve._index)"></select>
+
+                                                            
                                                 </td>
 
                                                 <td>
@@ -368,8 +370,10 @@
                 </wi-tabset>
             </div>
             <div class="modal-footer">
-                <button type="button" ng-click="wiModal.onApplyButtonClicked()" class="btn btn-default"><span class="apply-16x16"></span>&nbsp;Apply</button>
-                <button type="button" ng-click="wiModal.onOkButtonClicked()" class="btn btn-default"><span class="ok-16x16"></span>&nbsp;OK</button>
+                <button type="button" ng-click="wiModal.onApplyButtonClicked()" class="btn btn-default"
+                        ng-disabled="wiModal.applyInProgress"><span class="apply-16x16"></span>&nbsp;Apply</button>
+                <button type="button" ng-click="wiModal.onOkButtonClicked()" class="btn btn-default"
+                        ng-disabled="wiModal.applyInProgress"><span class="ok-16x16"></span>&nbsp;OK</button>
                 <button type="button" ng-click="wiModal.onCancelButtonClicked()" class="btn btn-default"><span class="close-16x16"></span>&nbsp;Cancel</button>
             </div>
         </div>
