--- a/source/dialogs/warning-message/warning-message-modal.html
+++ b/source/dialogs/warning-message/warning-message-modal.html
@@ -6,7 +6,7 @@
                 <h4>Warning</h4>
             </div>
             <div class="modal-body text-center padding-2em">
-                <span class="margin-left-0_5em" style="color:darkorange"><i>{{wiModal.warning}}</i></span>
+                <span class="margin-left-0_5em" style="color:darkorange; font-weight: bold" ng-bind-html="wiModal.warning"></span>
             </div>
             <div class="modal-footer">
                 <button class='btn btn-default' ng-click='wiModal.onCloseButtonClicked()'>Close</button>
