add project error

--- a/source/dialogs/new-project/new-project-modal.html
+++ b/source/dialogs/new-project/new-project-modal.html
@@ -45,7 +45,7 @@
                         </div>
                     </form>
                 </div>
-                <p class="dialog-error" ng-if="wiModal.error">Error: {{wiModal.error}}</p>
+                <!-- <p class="dialog-error" ng-if="wiModal.error">Error: {{wiModal.error}}</p> -->
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default"
