--- a/source/dialogs/curve-attribute/curve-attribute-modal.html
+++ b/source/dialogs/curve-attribute/curve-attribute-modal.html
@@ -76,9 +76,9 @@
                                                         class="form-control wi-form-control"
                                                         ng-options="item for item in wiModal.symbolType">
                                                 </select> -->
-                                                <ui-select theme="bootstrap" 
+                                                <ui-select theme="bootstrap" tagging
                                                             ng-model="wiModal.symbolOptions.symbolStyle.symbolName">
-                                                    <ui-select-match style="vertical-align: middle">
+                                                    <ui-select-match>
                                                         <canvas id="{{wiModal.symbolOptions.symbolStyle.symbolName + 'Icon'}}" width="20" height="20"></canvas>{{wiModal.symbolOptions.symbolStyle.symbolName}}
                                                     </ui-select-match>
                                                     <ui-select-choices repeat="type in wiModal.symbolType" position="down">
