--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -142,7 +142,7 @@
                                                 Width (inchs)
                                             </label>
                                             <div class="col-sm-8">
-                                                <input type="number" step="1.0" min="1"
+                                                <input type="number" step="any" min="0.5"
                                                        class="form-control wi-form-control" name="width"
                                                         ng-model="wiModal.props.general.width">
                                             </div>
@@ -199,8 +199,6 @@
                                                             ng-options="item.id as item.datasetCurve for item in wiModal.curvesArr"
                                                             ng-change="wiModal.onSelectCurve();" 
                                                             ng-disabled="wiModal.setDisabledCurve(curve._index)"></select>
-
-                                                            
                                                 </td>
 
                                                 <td>
