--- a/source/dialogs/shading-attribute/shading-attribute-modal.html
+++ b/source/dialogs/shading-attribute/shading-attribute-modal.html
@@ -776,6 +776,7 @@
                                         <button class="btn btn-default" ng-click="wiModal.addRow()"><span class="plus-16x16"></span></button>
                                         <button class="btn btn-default" ng-click="wiModal.removeRow()"><span class="delete-16x16"></span></button>
                                         <br><br>
+                                        <p class="template">Load from template</p>
                                         <select ng-model="wiModal.customFillsCurrent"
                                                 class="form-control wi-form-control normal-text"
                                                 ng-options="customFills as customFills.name for customFills in wiModal.customFillsList"
@@ -798,8 +799,8 @@
                                             </div>
                                         </div>
                                         <div class="col-sm-3">
-                                            <button ng-click="wiModal.saveCustomFills()" style="font-size: 11px"
-                                                    class="form-control wi-form-control">Template name</button>
+                                            <button ng-click="wiModal.saveCustomFills()"
+                                                    class="form-control wi-form-control template">Save to template</button>
                                         </div>
                                     </div>
                                 </form>
