Call apis for ternary dialog

--- a/source/dialogs/ternary/ternary-modal.html
+++ b/source/dialogs/ternary/ternary-modal.html
@@ -106,12 +106,13 @@
                                 selected-model="calculateOptions.area.polygons"
                                 extra-settings="selectDataSetting"
                                 disabled="calculateOptions.type != 'Area'"
+                                style="margin-left: 20px;"
                                 class="normal-text"></span>
 
                         <select ng-model="calculateOptions.area.exclude"
                                 class="form-control wi-form-control"
                                 ng-disabled="calculateOptions.type != 'Area'"
-                                style="display:inline-block; width: auto;"
+                                style="display:inline-block; width: auto; margin-left: 10px;"
                                 ng-options="(item ? 'Exclude' : 'Include') for item in [true, false]">
                         </select>
                         <br />
