--- a/source/dialogs/annotation-properties/annotation-properties-modal.html
+++ b/source/dialogs/annotation-properties/annotation-properties-modal.html
@@ -12,7 +12,7 @@
                             <h5>Text Attributes</h5>
                             <div class="form-group">
                                 <div class="col-sm-12">
-                                    <textarea rows="5" ng-model="wiModal.text" class="width-100-percent"></textarea>
+                                    <textarea rows="5" ng-model="wiModal.props.text" class="width-100-percent"></textarea>
                                 </div>
                             </div>
                             <button type="button" class="btn btn-default">Text...</button>
@@ -23,25 +23,25 @@
                             <div class="form-group">
                                 <label for="left" class="control-label col-sm-4 normal-text">Left (%)</label>
                                 <div class="col-sm-8">
-                                    <input type="number" step="0.01" class="form-control wi-form-control" id="left" ng-model="wiModal.left">
+                                    <input type="number" step="0.01" class="form-control wi-form-control" id="left" ng-model="wiModal.props.left">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="topDepth" class="control-label col-sm-4 normal-text">Top (depth)</label>
                                 <div class="col-sm-8">
-                                    <input type="number" class="form-control wi-form-control" id="topDepth" ng-model="wiModal.top">
+                                    <input type="number" class="form-control wi-form-control" id="topDepth" ng-model="wiModal.props.top">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="bottmDepth" class="control-label col-sm-4 normal-text">Bottom (depth)</label>
+                                <label for="bottomDepth" class="control-label col-sm-4 normal-text">Bottom (depth)</label>
                                 <div class="col-sm-8">
-                                    <input type="number" class="form-control wi-form-control" id="bottomDepth" ng-model="wiModal.bottom">
+                                    <input type="number" class="form-control wi-form-control" id="bottomDepth" ng-model="wiModal.props.bottom">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="width" class="control-label col-sm-4 normal-text">Width (%)</label>
                                 <div class="col-sm-8">
-                                    <input type="number" step="0.01" class="form-control wi-form-control" id="width" ng-model="wiModal.width">
+                                    <input type="number" step="0.01" class="form-control wi-form-control" id="width" ng-model="wiModal.props.width">
                                 </div>
                             </div>
                         </div>
@@ -50,44 +50,47 @@
                             <div class="form-group">
                                 <label for="alignment" class="control-label col-sm-4 normal-text">Alignment</label>
                                 <div class="col-sm-8">
-                                    <select ng-model="wiModal.alignment" class="form-control wi-form-control" id="alignment">
-                                        <option value="topLeft">Top Left</option>
-                                        <option value="bottomLeft">Bottom Left</option>
-                                        <option value="topRight">Top Right</option>
-                                        <option value="bottomRight">Bottom Right</option>
-                                        <option value="center">Center</option>
-                                        <option value="centerLeft">Center Left</option>
-                                        <option value="bottomCenter">Bottom Center</option>
-                                        <option value="centerRight">Center Right</option>
-                                        <option value="topCenter">Top Center</option>
+                                    <select ng-model="wiModal.alignment"
+                                            ng-change="wiModal.onAlignmentChange()"
+                                            ng-disabled="wiModal.props.fitBounds"
+                                            class="form-control wi-form-control" id="alignment">
+                                        <option value="top.left">Top Left</option>
+                                        <option value="bottom.left">Bottom Left</option>
+                                        <option value="top.right">Top Right</option>
+                                        <option value="bottom.right">Bottom Right</option>
+                                        <option value="center.center">Center</option>
+                                        <option value="center.left">Center Left</option>
+                                        <option value="bottom.center">Bottom Center</option>
+                                        <option value="center.right">Center Right</option>
+                                        <option value="top.center">Top Center</option>
                                     </select>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="justification" class="control-label col-sm-4 normal-text">Justification</label>
                                 <div class="col-sm-8">
-                                    <select ng-model="wiModal.justification" value="" class="form-control wi-form-control" id="justification">
-                                        <option value="left">Left</option>
-                                        <option value="center">Center</option>
-                                        <option value="right">Right</option>
+                                    <select ng-model="wiModal.props.justification" class="form-control wi-form-control" id="justification">
+                                        <option value="Left">Left</option>
+                                        <option value="Center">Center</option>
+                                        <option value="Right">Right</option>
                                     </select>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-sm-6">
                                     <label for="fitToBounds" class="col-sm-12 normal-text">
-                                        <input type="checkbox" id="fitToBounds" ng-model="wiModal.fitToBounds">Fit to Bounds
+                                        <input type="checkbox" id="fitToBounds" ng-model="wiModal.props.fitBounds">Fit to Bounds
                                     </label>
                                     <label for="inDeviceSpace" class="col-sm-12 normal-text">
-                                        <input type="checkbox" id="inDeviceSpace" ng-model="wiModal.inDeviceSpace">In Device Space
+                                        <input type="checkbox" id="inDeviceSpace" ng-model="wiModal.props.deviceSpace">In Device Space
                                     </label>
                                 </div>
                                 <div class="col-sm-6">
                                     <label for="shadow" class="col-sm-12 normal-text">
-                                        <input type="checkbox" id="shadow" ng-model="wiModal.shadow">Shadow
+                                        <input type="checkbox" id="shadow" ng-model="wiModal.props.shadow">Shadow
                                     </label>
                                     <label for="vertical" class="col-sm-12 normal-text">
-                                        <input type="checkbox" id="vertical" ng-model="wiModal.vertical">Vertical
+                                        <input type="checkbox" id="vertical" ng-model="wiModal.props.vertical">Vertical
                                     </label>
                                 </div>
                             </div>
