add multiselect module

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -48,7 +48,7 @@
     <link rel="stylesheet" href="css/wi-container.css">
     <link rel="stylesheet" href="css/wi-user.css">
     <link rel="stylesheet" href="css/wi-spinner.css">
-
+    <link rel="stylesheet" href="css/wi-multiselect.css">
     <link href='css/graph.css' rel='stylesheet'>
     <link href='css/main.css' rel='stylesheet'>
     <!-- Insert this line above script imports  -->
