--- a/source/dialogs/regression-line/regression-line-modal.html
+++ b/source/dialogs/regression-line/regression-line-modal.html
@@ -70,9 +70,9 @@
                                             <select ng-model="regLine.regType"
                                                     class="form-control wi-form-control"
                                                     ng-change="wiModal.onChange(regLine.index)">
-                                                <option value="linear">Linear</option>
-                                                <option value="exponent">Exponent</option>
-                                                <option value="power">Power</option>
+                                                <option value="Linear">Linear</option>
+                                                <option value="Exponent">Exponent</option>
+                                                <option value="Power">Power</option>
                                             </select>
                                         </td>
                                         <td>
@@ -88,11 +88,17 @@
                                             </select>
                                         </td>
                                         <td style="width: 15%">
-                                            <div ng-dropdown-multiselect=""
+                                            <!-- <div ng-dropdown-multiselect=""
                                                 options="wiModal.polygonList" 
                                                 selected-model="regLine.polygons" 
                                                 extra-settings="selectDataSetting"
-                                                class="normal-text"></div>
+                                                class="normal-text"></div> -->
+                                            <multiselect class="input-xlarge" multiple="true"
+                                                ng-model="regLine.polygons"
+                                                options="p.idPolygon for p in wiModal.polygonList"
+                                                change="selected()" 
+                                                ng-change="wiModal.onChange(regLine.index)">
+                                            </multiselect>
                                         </td>
                                         
                                         <td style="width: 7%">
