--- a/source/dialogs/annotation-properties/annotation-properties-modal.html
+++ b/source/dialogs/annotation-properties/annotation-properties-modal.html
@@ -48,28 +48,19 @@
                         <div>
                             <h5>Options</h5>
                             <div class="form-group">
-                                <label for="alignment" class="control-label col-sm-4 normal-text">Alignment</label>
+                                <label for="vAlign" class="control-label col-sm-4 normal-text">Vertical Alignment</label>
                                 <div class="col-sm-8">
-                                    <select ng-model="wiModal.alignment"
-                                            ng-change="wiModal.onAlignmentChange()"
-                                            ng-disabled="wiModal.props.fitBounds"
-                                            class="form-control wi-form-control" id="alignment">
-                                        <option value="top.left">Top Left</option>
-                                        <option value="bottom.left">Bottom Left</option>
-                                        <option value="top.right">Top Right</option>
-                                        <option value="bottom.right">Bottom Right</option>
-                                        <option value="center.center">Center</option>
-                                        <option value="center.left">Center Left</option>
-                                        <option value="bottom.center">Bottom Center</option>
-                                        <option value="center.right">Center Right</option>
-                                        <option value="top.center">Top Center</option>
+                                    <select ng-model="wiModal.props.vAlign" class="form-control wi-form-control" id="vAlign">
+                                        <option value="Top">Top</option>
+                                        <option value="Center">Center</option>
+                                        <option value="Bottom">Bottom</option>
                                     </select>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="justification" class="control-label col-sm-4 normal-text">Justification</label>
+                                <label for="hAlign" class="control-label col-sm-4 normal-text">Horizontal Alignment</label>
                                 <div class="col-sm-8">
-                                    <select ng-model="wiModal.props.justification" class="form-control wi-form-control" id="justification">
+                                    <select ng-model="wiModal.props.hAlign" class="form-control wi-form-control" id="hAlign">
                                         <option value="Left">Left</option>
                                         <option value="Center">Center</option>
                                         <option value="Right">Right</option>
