--- a/source/dialogs/annotation-properties/annotation-properties-modal.html
+++ b/source/dialogs/annotation-properties/annotation-properties-modal.html
@@ -29,13 +29,13 @@
                             <div class="form-group">
                                 <label for="topDepth" class="control-label col-sm-4 normal-text">Top (depth)</label>
                                 <div class="col-sm-8">
-                                    <input type="number" class="form-control wi-form-control" id="topDepth" ng-model="wiModal.props.top">
+                                    <input type="number" step="0.01" class="form-control wi-form-control" id="topDepth" ng-model="wiModal.props.top">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="bottomDepth" class="control-label col-sm-4 normal-text">Bottom (depth)</label>
                                 <div class="col-sm-8">
-                                    <input type="number" class="form-control wi-form-control" id="bottomDepth" ng-model="wiModal.props.bottom">
+                                    <input type="number" step="0.01" class="form-control wi-form-control" id="bottomDepth" ng-model="wiModal.props.bottom">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -50,7 +50,7 @@
                             <div class="form-group">
                                 <label for="vAlign" class="control-label col-sm-4 normal-text">Vertical Alignment</label>
                                 <div class="col-sm-8">
-                                    <select ng-model="wiModal.props.vAlign" class="form-control wi-form-control" id="vAlign">
+                                    <select ng-model="wiModal.props.vAlign" class="form-control wi-form-control" id="vAlign" ng-disabled="wiModal.props.fitBounds">
                                         <option value="Top">Top</option>
                                         <option value="Center">Center</option>
                                         <option value="Bottom">Bottom</option>
@@ -60,7 +60,7 @@
                             <div class="form-group">
                                 <label for="hAlign" class="control-label col-sm-4 normal-text">Horizontal Alignment</label>
                                 <div class="col-sm-8">
-                                    <select ng-model="wiModal.props.hAlign" class="form-control wi-form-control" id="hAlign">
+                                    <select ng-model="wiModal.props.hAlign" class="form-control wi-form-control" id="hAlign" ng-disabled="wiModal.props.fitBounds">
                                         <option value="Left">Left</option>
                                         <option value="Center">Center</option>
                                         <option value="Right">Right</option>
@@ -89,8 +89,8 @@
                     </div>
             </div>
             <div class="modal-footer">
-                <button type="button" ng-click="wiModal.onApplyButtonClicked()" class="btn btn-default">
-                    <span class="apply-16x16"></span>&nbsp;Apply</button>
+                <!-- <button type="button" ng-click="wiModal.onApplyButtonClicked()" class="btn btn-default">
+                    <span class="apply-16x16"></span>&nbsp;Apply</button> -->
                 <button type="button" ng-click="wiModal.onOkButtonClicked()" class="btn btn-default">
                     <span class="ok-16x16"></span>&nbsp;OK</button>
                 <button type="button" ng-click="wiModal.onCancelButtonClicked()" class="btn btn-default">
