--- a/source/dialogs/reference-windows/reference-windows-modal.html
+++ b/source/dialogs/reference-windows/reference-windows-modal.html
@@ -25,22 +25,22 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-sm-2">Scale 1</label>
+                                <label class="col-sm-2">Scale</label>
                                 <div class="col-sm-2">
                                     <input type="number" list='scaleOpt' class="form-control wi-form-control"
                                     ng-model="wiModal.props.referenceScale">
                                     <datalist id="scaleOpt">
-                                        <option value="1">1</option>
-                                        <option value="20">20</option>
-                                        <option value="50">50</option>
-                                        <option value="100">100</option>
-                                        <option value="200">200</option>
-                                        <option value="300">300</option>
-                                        <option value="500">500</option>
-                                        <option value="1000">1000</option>
-                                        <option value="2000">2000</option>
-                                        <option value="3000">3000</option>
-                                        <option value="5000">5000</option>
+                                        <option value="20">1:20</option>
+                                        <option value="50">1:50</option>
+                                        <option value="100">1:100</option>
+                                        <option value="200">1:200</option>
+                                        <option value="300">1:300</option>
+                                        <option value="500">1:500</option>
+                                        <option value="1000">1:1000</option>
+                                        <option value="2000">1:2000</option>
+                                        <option value="3000">1:3000</option>
+                                        <option value="5000">1:5000</option>
+                                        <option value="-1">Full</option>
                                     </datalist>
                                 </div>
                                 <label class="col-sm-3">Vert. Line Number</label>
@@ -62,7 +62,7 @@
                                     <table class="table table-bordered">
                                         <thead>
                                             <tr>
-                                                <th></th>
+                                                <th style='padding:1.5px;'></th>
                                                 <th style="width:25%">Curve Name</th>
                                                 <th>Left</th>
                                                 <th>Right</th>
@@ -75,11 +75,11 @@
                                             <tr ng-repeat="ref_curve in wiModal.ref_Curves_Arr"
                                             ng-click="wiModal.setClickedRow($index)"
                                             ng-class="{selected:$index == wiModal.SelectedRefCurve, 'display-none': ref_curve.flag === wiModal._FDEL}">
-                                                <td ng-class="{'color-navy': $index == wiModal.SelectedRefCurve}">
+                                                <td ng-class="{'color-navy': $index == wiModal.SelectedRefCurve}" style='padding:1.5px;'>
                                                 </td>
                                                 <td>
                                                     <ui-select ng-model="ref_curve.curve"
-                                                        ng-change="wiModal.onRefCurveChange($index, 'curve')">
+                                                        ng-change="wiModal.onSelectRefCurve($index, 'curve')">
                                                         <ui-select-match placeholder='Select a curve'>{{ref_curve.curve.name}}</ui-select-match>
                                                         <ui-select-choices group-by="'datasetName'"
                                                         repeat='curve.properties as curve in wiModal.curvesArr | filter: $select.search'>
@@ -88,22 +88,30 @@
                                                     </ui-select>
                                                 </td>
                                                 <td>
-                                                    <input type="number" class="form-control wi-form-control"
+                                                    <input type="number" class="form-control"
                                                     ng-model="ref_curve.left" step='1'
                                                     ng-change="wiModal.onRefCurveChange($index)">
                                                 </td>
                                                 <td>
-                                                    <input type="number" class="form-control wi-form-control"
+                                                    <input type="number" class="form-control"
                                                     ng-model="ref_curve.right" step='1'
                                                     ng-change="wiModal.onRefCurveChange($index)">
                                                 </td>
                                                 <td>
-                                                    <input type="checkbox" ng-model="ref_curve.visiable"
-                                                    ng-change="wiModal.onRefCurveChange($index)">
+                                                    <div class='checkbox'>
+                                                        <input style='margin-left:-10px;' 
+                                                            type="checkbox" 
+                                                            ng-model="ref_curve.visiable"
+                                                            ng-change="wiModal.onRefCurveChange($index)">
+                                                    </div>
                                                 </td>
                                                 <td>
-                                                    <input type="checkbox" ng-model="ref_curve.log"
-                                                    ng-change="wiModal.onRefCurveChange($index)">
+                                                    <div class='checkbox'>
+                                                        <input style='margin-left:-10px;' 
+                                                            type="checkbox" 
+                                                            ng-model="ref_curve.log"
+                                                            ng-change="wiModal.onRefCurveChange($index)">
+                                                    </div>
                                                 </td>
                                                 <td>
                                                     <input ng-style="{'background-color':ref_curve.color}" ng-click="wiModal.chooseRefCurveColor($index);" class="form-control wi-form-control width-80px thick-border" type="button">
